--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: huxpro@gmail.com
 description: "初涉GITHUB"
 keyword: "博客, 个人网站, 互联网, Web, JavaScript, 前端"
 url: "https://huangxuan.me"              # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/helloworld"                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
