--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "探索"
-sidebar-avatar: /img/avatar-kim.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: ./img/avatar-kim.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
