--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: huxpro@gmail.com
 description: "初涉GITHUB"
 keyword: "博客, 个人网站, 互联网, Web, JavaScript, 前端"
-url: "https://huangxuan.me"              # your host, for absolute URL
+url: ""              # your host, for absolute URL
 baseurl: "/helloworld"                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
@@ -55,7 +55,7 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: auto
 
 
 
